mysql local install

--- a/config-data/invoice-service.yml
+++ b/config-data/invoice-service.yml
@@ -7,9 +7,10 @@ server:
     include-stacktrace: never
 spring:
   datasource:
-    url: jdbc:mysql://host.docker.internal:49153/service-invoice
+    #url: jdbc:mysql://host.docker.internal:49153/service-invoice
+    url: jdbc:mysql://localhost:3306/service-dentist
     username: root
-    password: mysqlpw
+    password: mysqladmin
     driverClassName: com.mysql.jdbc.Driver
 
   # ===============================
