--- a/config-data/treatment-service.yml
+++ b/config-data/treatment-service.yml
@@ -12,7 +12,7 @@ spring:
     show-sql: true
   datasource:
     #url: jdbc:mysql://host.docker.internal:49153/service-treatment
-    url: jdbc:mysql://localhost:3306/service-dentist
+    url: jdbc:mysql://localhost:3306/service-treatment
     username: root
     password: mysqladmin
     driverClassName: com.mysql.jdbc.Driver
